[gd_scene load_steps=8 format=3 uid="uid://cvvewevudo2kf"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_llsyg"]
[ext_resource type="Texture2D" uid="uid://dfobe5bchkqus" path="res://assets/sprites/ui/spr_main_bar.png" id="2_5714a"]
[ext_resource type="Texture2D" uid="uid://b7u6236m7y18h" path="res://assets/sprites/ui/spr_health_bar.png" id="3_1pc4k"]
[ext_resource type="Texture2D" uid="uid://bdsyj5ksya7a6" path="res://assets/sprites/ui/spr_exp_bar.png" id="4_vuae4"]
[ext_resource type="Texture2D" uid="uid://c0cfiod5vy0d7" path="res://assets/sprites/ui/spr_mana_ui.png" id="5_7bbpp"]
[ext_resource type="FontFile" uid="uid://d1oajvjlhivng" path="res://assets/fonts/8bitOperatorPlus8-Regular.ttf" id="5_v7132"]
[ext_resource type="Texture2D" uid="uid://dkf1fc3fmyqoy" path="res://assets/sprites/ui/spr_mana_bar.png" id="6_7a3li"]

[node name="HUD" type="CanvasLayer"]
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)
script = ExtResource("1_llsyg")

[node name="Main" type="TextureRect" parent="."]
offset_top = 4.0
offset_right = 57.0
offset_bottom = 24.0
texture = ExtResource("2_5714a")
stretch_mode = 2

[node name="HealthBar" type="TextureProgressBar" parent="Main"]
layout_mode = 0
offset_left = 14.0
offset_top = 5.0
offset_right = 49.0
offset_bottom = 8.0
max_value = 35.0
texture_progress = ExtResource("3_1pc4k")
tint_progress = Color(0.81, 0.81, 0.81, 1)

[node name="ExpBar" type="TextureProgressBar" parent="Main"]
layout_mode = 0
offset_left = 14.0
offset_top = 13.0
offset_right = 49.0
offset_bottom = 15.0
max_value = 35.0
texture_progress = ExtResource("4_vuae4")

[node name="Mana" type="TextureRect" parent="."]
offset_left = 2.0
offset_top = 26.0
offset_right = 50.0
offset_bottom = 38.0
texture = ExtResource("5_7bbpp")

[node name="ManaThreshold" type="Line2D" parent="Mana"]
position = Vector2(14, 4.66667)
points = PackedVector2Array(0, 0.333, 0, 2.333)
width = 1.0
default_color = Color(0.215686, 0.156863, 0.137255, 1)

[node name="ManaBar" type="TextureProgressBar" parent="Mana"]
layout_mode = 0
offset_left = 14.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 7.0
max_value = 31.0
texture_progress = ExtResource("6_7a3li")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 114.0
offset_top = 4.66667
offset_right = 212.0
offset_bottom = 20.6667
theme_override_fonts/font = ExtResource("5_v7132")
theme_override_font_sizes/font_size = 14
text = "Stars: 0"
horizontal_alignment = 2
